--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "gatsby-cli": "^5.8.0",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.0"
   },
